src/internal/item-container/styles.scss
/*
 Copyright Amazon.com, Inc. or its affiliates. All Rights Reserved.
 SPDX-License-Identifier: Apache-2.0
*/

.root {
  touch-action: none;
  position: relative;
  block-size: 100%;
}

.inTransition {
  transition: transform 200ms;
  transition-timing-function: ease;
}

.transformed {
  position: absolute;
  z-index: 1;
}
.removed {
  display: none;
}
.dragged {
  z-index: 2000;
  position: fixed;
}
.resized {
  z-index: 2000;
  position: absolute;
}
.hidden {
  display: none;
}

